--- a/petclinic-data/pom.xml
+++ b/petclinic-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>custom-petclinic</artifactId>
         <groupId>org.ademchenko</groupId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +12,7 @@
     </properties>
 
     <artifactId>petclinic-data</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>1.1</version>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
