--- a/petclinic-web/pom.xml
+++ b/petclinic-web/pom.xml
@@ -9,6 +9,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>petclinic-web</artifactId>
+    <groupId>org.ademchenko</groupId>
     <version>1.1</version>
 
     <properties>
