--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
                 <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
                     <goals>install</goals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
@@ -41,7 +43,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/demchenkoalexeyv/custom-petclinic.git</developerConnection>
-      <tag>1.1</tag>
+        <tag>1.1</tag>
     </scm>
 
     <repositories>
